# monat

./: .gitignore  Cargo.toml  README.md
completion_scripts/: _monat.bash  mn.bash
i18n/: README-zh.md
src/: main.rs
src/monat/: config.rs  histmanager.rs  mod.rs  pathepitome.rs  run.rs
